--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,29 @@
+html,
+body {
+  min-height: 100%;
+}
+
+body {
+  background-image: url("../images/fern.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  font-family: 'Comfortaa', cursive
+}
+
+.footerIcons {
+  border-right: solid 1px #dedede;
+}
+
 @media screen and (max-width: 767px) {
   #myPic {
     min-width: 100%;
+  }
+}
+
+@media screen and (max-width: 1199px) {
+  .footerIcons{
+    border: none;
   }
 }
 
