add portfolio page, stick footer to bottom, update resume to go to new page since pdf modal not supported by mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,15 @@
-html,
-body {
-  min-height: 100%;
+#page-container {
+  position: relative;
+  min-height: 100vh;
+}
+
+#content-wrapper {
+  padding-bottom: 6rem;
 }
 
 body {
-  background-image: url("../images/fern.jpg");
+  min-height: 100vh;
+  position: relative;
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -22,7 +27,7 @@ body {
 
 @media screen and (max-width: 767px) {
   #myPic {
-    min-width: 100%;
+    min-width: 60%;
     margin-left: auto;
     margin-right: auto;
   }
@@ -35,7 +40,3 @@ body {
   font-size: 10px;
 }
 }
-
-/* .email-and-ph {
-  font-size: 1px;
-} */
