modify text color on portfolio page to make it a little more green to match w/ about me page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,7 +32,7 @@ body {
 
 #email-and-ph-portfolio {
   font-size: 14px;
-  color: rgb(115, 181, 197);
+  color: #73c2c5;
 }
 
 @media screen and (max-width: 767px) {
